[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/enemy/enemy_aggro_box.gd" type="Script" id=1]
[ext_resource path="res://src/hurtbox.gd" type="Script" id=2]
[ext_resource path="res://scenes/instanced/state_machines/enemy_state_machine_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/hitbox.gd" type="Script" id=4]
[ext_resource path="res://src/enemy/enemy.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 12 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 8 )

[node name="EnemyTurret" type="Node2D"]
script = ExtResource( 5 )

[node name="EnemyStateMachineBase" parent="." instance=ExtResource( 3 )]
target_instance_path = NodePath("..")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
script = ExtResource( 4 )
active = true
contact_damage = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="AggroBox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AggroBox"]
shape = SubResource( 3 )

[node name="DyingTimer" type="Timer" parent="."]
wait_time = 0.5
[connection signal="take_damage" from="Hurtbox" to="." method="take_damage"]
